fixed some layout issues and moved text descriptions over images.

--- a/assets/style.css
+++ b/assets/style.css
@@ -2,8 +2,7 @@
     box-sizing: border-box;
     margin: 0;
     padding: 0;
-    font-family:Arial, Helvetica, sans-serif;
-    
+    font-family:Arial, Helvetica, sans-serif;  
 }
 /* Code below is for the header portion of the project */
 .header {
@@ -15,7 +14,6 @@
     background-color: teal;
     align-items: center;
 }
-
 .header h1 {
     background-color: white;
     padding-left: 100px;
@@ -23,20 +21,17 @@
     padding-bottom: 15px;
     padding-right: 15px;
 }
-
 .header ul {
     display: flex;
     list-style: none;
     padding-right: 100px;
 }
-
 header li {
     padding: 5px;
     margin-left: 35px;
     border-bottom: 2px solid white; 
 }
 /* Code below is for the div portion of the project */
-
 .hero {
     height: 250px;
     margin-bottom: 30px;
@@ -45,7 +40,6 @@ header li {
     background-position: center;
     position: relative;
 }
-
 .hero h2 {
     display:inline-block;
     padding: 10px;
@@ -54,54 +48,48 @@ header li {
     position: relative;
     top: 70%;
     left: 80%;
-
 }
-
 .main {
+    margin-left: 15%;
+}
+/* Code below is for all sections sections */
+.info {
     display: flex;
     flex-direction: column;
-    margin-left: 20%;
-    
-    
-}
-
-/* Code below is for all sections sections */
-.section {
-    display: flex;
-      
 }
 h3 {
-    display: flex;
     text-align: end;
     padding-right: 15px;
-    border-right: solid 3px black;
 }
-
+.box-content {
+    padding-left: 30px;
+    border-left: solid 3px black;
+}
 /* code below is for about me section only */
-
-.about-me-text {
+.About-Me-box {
     display: flex;
-    flex-direction: column;
-    padding: 0px 20px 20px 20px
-    
+    padding-right: 50px;
 }
-
 /*code below is for work section only */
-
-.work {
-    
+.work-box {
     display: flex;
-    flex-wrap: wrap;
-    max-width: 200px;
-    height: auto;
-    padding: 0px 20px 20px 20px;
+    padding-right: 50px;   
 }
-
 img {
    max-width: 100%;
 }
-
-section ul {
+.work-image-text {
+    display: inline-block;
+    background-color: yellow;
+    padding: 10px;
+    position: relative;
+    bottom: 100px;
+}
+.contact-me-box {
+    display: flex;
+    padding-right: 50px;
+}
+.info ul {
     list-style: none;
 }
 
